<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yacamim Relationship Mapping Defaults</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_bidirectional_many_to_many">Bidirectional >> ManyToMany</string>
    <string name="title_activity_bidirectional_many_to_one_one_to_many">Bidirectional >> ManyToOne/OneToMany</string>
    <string name="title_activity_bidirectional_one_to_one">Bidirectional >> OneToOne</string>
    <string name="title_activity_bidirectional_one_to_one_cubicle">Bidirectional >> OneToOne Cubicle</string>
    <string name="title_activity_unidirectional_many_to_one">Unidirectional >> ManyToOne</string>
    <string name="title_activity_unidirectional_one_to_one">Unidirectional >> OneToOne</string>
    <string name="title_activity_unidirectional_multi_valued_one_to_many">OneToMany</string>
    <string name="title_activity_unidirectional_multi_valued_many_to_many">ManyToMany</string>
    <string name="title_activity_unidirectional_multi_valued">Unidirectional Multi-Valued</string>
    <string name="label_employee">Employee: </string>
    <string name="label_travel_profile">Travel Profile: </string>
    <string name="label_city">City: </string>
    <string name="y_MsgOK">OK</string>
    <string name="y_MsgSuccesfullyInserted">Registro inserido com sucesso.</string>
    <string name="y_MsgSuccesfullyUpdated">Regsitro atuaizado com sucesso.</string>
    <string name="y_MsgInvalidData">Dados inválidos.</string>
    <string name="y_MsgSelectAnItem">Selecione um Item.</string>
    <string name="y_MsgWait">Aguarde...</string>
    <string name="y_MsgNoInformationFound">Nenhuma informação encontrada.</string>
    <string name="y_MsgNoRecordsFoundForParameters">Nenhum regsitro encontrado.</string>
    <string name="y_MsgNoRecordSelected">Nenhum registro seleiconado.</string>
    <string name="y_MsgNoConnectivityAvailable">Conexão indisponível.</string>
    <string name="y_MsgNoWifiConnectivityAvailable">Conexão Wifi indisponível.</string>
    <string name="y_MsgConstraintDependency">O registro não pode ser excluído.</string>

    <string name="teste_list">Teste List</string>
    <string name="teste_insert">Teste Insert</string>
    <string name="teste_update">Teste Update</string>
    <string name="list">List</string>
    <string name="list_employee">List Employee</string>
    <string name="list_cubicle">List Cubicle</string>
    <string name="list_department">List Department</string>
    <string name="insert">Insert</string>
    <string name="insert_employee">Insert Employee</string>
    <string name="update_employee">Update Employee</string>
    <string name="insert_department">Insert Department</string>
    <string name="update_department">Update Department</string>
    <string name="insert_project">Insert Project</string>
    <string name="update_project">Update Project</string>
    <string name="insert_cubicle">Insert Cubicle</string>
</resources>